# wfc3dash

./: README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
wfc3dash/: demo.py  process_raw.py
wfc3dash/grism/: alignment.py  grism.py  tiles.py
wfc3dash/tests/: test_empty.py
