[metadata]
name = grizli
description = Grism analysis pipeline
author = G. Brammer
author_email = gbrammer@gmail.com
license = MIT
url = http://github.com/gbrammer/wfc3dash
edit_on_github = False
github_project = gbrammer/wfc3dash
install_requires = 
    numpy
    cython
    astropy
description-file = README.md
python_requires = ">=3.6"
version = 0.1

[options]
install_requires = numpy, cython
zip_safe = False
use_2to3 = False

[tool:pytest]
minversion = 3.0
doctest_plus = enabled
addopts = -p no:warnings
testpaths = wfc3dash/tests

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[entry_points]
astropy-package-template-example = packagename.example_mod:main

